--- a/index.html
+++ b/index.html
@@ -204,6 +204,26 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/products/g2.png" class="glightbox"><img src="assets/img/products/g2.png" class="menu-img img-fluid" alt=""></a>
               </div><!-- Menu Item -->
+
+              <div class="col-lg-4 menu-item">
+                <a href="assets/img/products/g7.jpeg" class="glightbox"><img src="assets/img/products/g7.jpeg" class="menu-img img-fluid" alt=""></a>
+              </div><!-- Menu Item -->
+
+              <div class="col-lg-4 menu-item">
+                <a href="assets/img/products/g8.jpeg" class="glightbox"><img src="assets/img/products/g8.jpeg" class="menu-img img-fluid" alt=""></a>
+              </div><!-- Menu Item -->
+
+              <div class="col-lg-4 menu-item">
+                <a href="assets/img/products/g9.jpeg" class="glightbox"><img src="assets/img/products/g9.jpeg" class="menu-img img-fluid" alt=""></a>
+              </div><!-- Menu Item -->
+
+              <div class="col-lg-4 menu-item">
+                <a href="assets/img/products/g10.jpeg" class="glightbox"><img src="assets/img/products/g10.jpeg" class="menu-img img-fluid" alt=""></a>
+              </div><!-- Menu Item -->
+
+              <div class="col-lg-4 menu-item">
+                <a href="assets/img/products/g11.jpeg" class="glightbox"><img src="assets/img/products/g11.jpeg" class="menu-img img-fluid" alt=""></a>
+              </div><!-- Menu Item -->
              </div>
           </div><!-- End Starter Menu Content -->
         </div>
